# Synthetic-Atrophy-For-Longitidunal-Cortical-Surface-Analyses

./: CMakeLists.txt  README.md  Synthetic-Atrophy_example.sh
src/: fillHoles.cxx
